[package]
name = "git_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
log = "0.4.17"
shlex = "1.1.0"

[dev-dependencies]
tempfile = "3.4.0"
assert_cmd = "2.0.8"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
